[package]
name = "bingle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"
bevy_rapier2d = "0.23.0"
bevy_turborand = "0.7.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
